--- a/gui/pom.xml
+++ b/gui/pom.xml
@@ -34,6 +34,11 @@
       <version>0.0.1</version>
     </dependency>
     <dependency>
+      <groupId>com.github.weisj</groupId>
+      <artifactId>darklaf-core</artifactId>
+      <version>3.1.1</version>
+    </dependency>
+    <dependency>
       <groupId>org.junit.jupiter</groupId>
       <artifactId>junit-jupiter-api</artifactId>
       <scope>test</scope>
